...
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_rights">Your Rights</string>

    <!-- Menu item: This is the label for a menu entry that shows how many trackers have been blocked
...

    <!-- Header for the Privacy and Security settings menu -->
    <string name="preference_privacy_and_security_header">Privacy &amp; Security</string>

    <!-- Preference summary for settings related to privacy and security -->
...

    <!-- Preference category for General Settings -->
    <string name="preference_category_general">General</string>

    <!-- Preference summary for General Settings category; the two things users can find in this category -->
...
    <string name="preference_category_data_collection_use">Data Collection &amp; Use</string>

    <string name="preference_category_search">Search</string>

    <!-- Title of "switch" preference that enables/disables search suggestions -->
...

    <!-- This label is shown above the currently selected search engine in settings -->
    <string name="preference_search_engine_label">Search engine</string>

    <!-- Text that is shown below a "switch" preference that is enabled. -->
...

    <!-- Item in autocomplete settings that will open a new preference screen for adding and removing URLs to the user-defined list-->
    <string name="preference_autocomplete_subitem_manage_sites">Manage sites</string>

    <!-- Action at the bottom of the list of custom autocomplete URLs that will open a new screen to add a new URL to the list. -->
    <string name="preference_autocomplete_action_add">+ Add custom URL</string>

    <!-- Explanation text above the list of custom autocomplete URLs. -->
...

    <!-- Title of the screen for removing custom autocomplete URLs. -->
    <string name="preference_autocomplete_title_remove">Remove custom URLs</string>

    <!-- A link to SUMO at autocomplete settings. -->
...

    <!-- Menu item to remove existing autocomplete URLs. -->
    <string name="preference_autocomplete_menu_remove">Remove</string>

    <!-- Content description (not visible, for screen readers etc.): Button that will delete all selected custom autocomplete URLs. -->
...
    <string name="preference_autocomplete_add_error">Double-check the URL you entered.</string>

    <string name="preference_language">Language</string>
    <!-- This is shown when the user hasn't set a focus specific language, i.e. when Focus
         is using the system default language. -->
...
    <string name="preference_privacy_block_content">Block other content trackers</string>
    <string name="preference_privacy_block_content_summary2">Enabling may cause some pages to behave unexpectedly</string>
    <string name="preference_privacy_category_cookies">Block cookies</string>

    <!-- Three options for Cookie blocking. Yes (All cookies Blocked), Block 3rd-party cookies
...
    <string name="preference_default_browser2">Make %1$s default browser</string>

    <string name="preference_category_mozilla">Mozilla</string>
    <string name="preference_mozilla_telemetry2">Send usage data</string>

...

    <!-- Item in Preferences that shows the about page. Parameter 1 is the app name, i.e. Firefox Focus/Firefox Klar. -->
    <string name="preference_about">About %1$s</string>

    <!-- Header for the list of installed search engines -->
    <string name="preference_search_installed_search_engines">Installed search engines</string>

    <!-- Header for the list of installed search engines -->
...
    <!-- Action for adding an additional search engine to the list.
    The "+" is used to emphasize that this is an "add" action -->
    <string name="preference_search_add2">+ Add another search engine</string>
    <string name="preference_search_remove_title">Remove search engines</string>
    <string name="preference_search_remove">Remove</string>
    <!-- Action for dding an additional search engine to the list -->
    <string name="preference_search_add3">Add another search engine</string>
...

    <!-- Title of Advanced Setting category -->
    <string name="preference_category_advanced">Advanced</string>

    <!-- Preference for site permissions -->
...

    <!-- Preference to enable remote debugging of the app via USB or Wi-Fi -->
    <string name="preference_remote_debugging">Remote debugging via USB/Wi-Fi</string>

    <!-- Text Button for show biometric prompt -->
...
