<resources>
    <string name="app_name">MessagingExample</string>
</resources>

